# streamkit

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.demo  Dockerfile.full  Dockerfile.full-gpu  Dockerfile.gpu  NOTICE  README.md  RELEASING.md  REUSE.toml  ROADMAP.md  THIRD_PARTY_LICENSES.txt  about.toml  cliff.toml  clippy.toml  deny.toml  docker-skit-demo.toml  docker-skit-gpu.toml  docker-skit.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  e2e.yml  plugins.yml  release.yml  reuse.yml  skit.yml  ui.yml
.husky/: commit-msg  pre-commit
LICENSES/: LicenseRef-VoIPTroubleshooter-OpenSpeech.txt  MPL-2.0.txt
apps/skit/: Cargo.toml
apps/skit-cli/: Cargo.toml
apps/skit-cli/src/: client.rs  lib.rs  main.rs  shell.rs
apps/skit-cli/src/load_test/: config.rs  metrics.rs  mod.rs  populate.rs  scenarios.rs  workers.rs
apps/skit/src/: assets.rs  cli.rs  config.rs  file_security.rs  lib.rs  logging.rs  main.rs  moq_gateway.rs  permissions.rs  plugins.rs  profiling.rs  role_extractor.rs  samples.rs  server.rs  session.rs  state.rs  telemetry.rs  websocket.rs  websocket_handlers.rs
apps/skit/tests/: base_path_routing_test.rs  end_to_end_test.rs  http_origin_test.rs  http_sessions_test.rs  plugin_integration_test.rs  sample_config_test.rs  session_lifecycle_test.rs  websocket_origin_test.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs  yaml.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: control.rs  error.rs  frame_pool.rs  helpers.rs  lib.rs  moq_gateway.rs  node.rs  node_config.rs  packet_meta.rs  pins.rs  registry.rs  resource_manager.rs  state.rs  stats.rs  telemetry.rs  types.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: constants.rs  dynamic_actor.rs  dynamic_config.rs  dynamic_handle.rs  dynamic_messages.rs  dynamic_pin_distributor.rs  graph_builder.rs  lib.rs  oneshot.rs
crates/engine/src/tests/: connection_types.rs  dynamic_initialize.rs  mod.rs  oneshot_linear.rs  pin_distributor.rs
crates/engine/tests/: backpressure.rs
crates/nodes/: Cargo.toml  README.md
crates/nodes/src/: lib.rs  streaming_utils.rs  test_utils.rs
crates/nodes/src/audio/: mod.rs  pacer.rs
crates/nodes/src/audio/codecs/: flac.rs  mod.rs  mp3.rs  opus.rs
crates/nodes/src/audio/filters/: gain.rs  mixer.rs  mod.rs  resampler.rs
crates/nodes/src/containers/: mod.rs  ogg.rs  tests.rs  wav.rs  webm.rs
crates/nodes/src/core/: bytes_input.rs  bytes_output.rs  file_read.rs  file_write.rs  json_serialize.rs  mod.rs  pacer.rs  passthrough.rs  script.rs  sink.rs  telemetry_out.rs  telemetry_tap.rs  text_chunker.rs
crates/nodes/src/transport/: http.rs  mod.rs
crates/nodes/src/transport/moq/: constants.rs  mod.rs  peer.rs  pull.rs  push.rs
crates/nodes/testdata/audio/: sample.flac  sample.mp3.license
crates/plugin-native/: Cargo.toml  README.md
crates/plugin-native/src/: lib.rs  wrapper.rs
crates/plugin-wasm/: Cargo.toml  README.md  build.rs
crates/plugin-wasm/src/: conversions.rs  lib.rs  wrapper.rs
deploy/systemd/: install.sh  skit.toml  streamkit.env  streamkit.service
docs/: astro.config.mjs  package.json
docs/public/: CNAME
docs/public/scripts/: mermaid-renderer.js
docs/src/components/: Mermaid.astro  ThemeProvider.astro  ThemeSelect.astro
docs/src/plugins/: github-alerts-to-starlight-asides.mjs
docs/src/styles/: custom.css
e2e/: .prettierignore  README.md  package.json  playwright.config.ts  tsconfig.json
e2e/src/harness/: health.ts  port.ts  run.ts
e2e/tests/: design.spec.ts  monitor.spec.ts
examples/plugins/gain-native/: Cargo.toml  README.md
examples/plugins/gain-native-c/: Makefile  README.md  gain_plugin.c  streamkit_plugin.h
examples/plugins/gain-native/src/: lib.rs
examples/plugins/gain-wasm-c/: .gitignore  Makefile  README.md  gain_plugin.c  plugin.h
examples/plugins/gain-wasm-go/: .gitignore  README.md  go.mod  plugin.go
examples/plugins/gain-wasm-rust/: Cargo.toml  README.md
examples/plugins/gain-wasm-rust/src/: lib.rs
plugins/native/helsinki/: Cargo.toml  README.md  download-models.py
plugins/native/helsinki/src/: config.rs  lib.rs  model.rs  translation.rs
plugins/native/kokoro/: .gitignore  Cargo.toml  README.md  clippy.toml
plugins/native/kokoro/src/: config.rs  kokoro_node.rs  lib.rs  sentence_splitter.rs
plugins/native/matcha/: Cargo.toml  README.md  download-models.sh
plugins/native/nllb/: Cargo.toml  README.md
plugins/native/nllb/src/: lib.rs
plugins/native/piper/: Cargo.toml  README.md  build.rs  download-models.sh  download-piper-spanish.sh
plugins/native/sensevoice/: Cargo.toml  README.md
plugins/native/vad/: Cargo.toml  README.md
plugins/native/vad/src/: config.rs  ffi.rs  lib.rs  vad_node.rs
plugins/native/whisper/: Cargo.toml  README.md
plugins/native/whisper/src/: lib.rs  vad.rs
samples/: grafana-dashboard.json  sample.txt  skit.toml
samples/audio/system/: TEA FOR TWO.mp3.license  TEA FOR TWO.opus  THE LADY IS A TRAMP.opus  ehren-paper_lights-96.m4a.license  speech_10m.opus  speech_10m.wav.license  speech_2m.opus
samples/loadtest/: dynamic-lt.toml  dynamic-moq-fanout.toml  dynamic-scale-audio-gain.toml  dynamic-tune-heavy.toml  mixed-balanced.toml  oneshot-graph-chain.toml  oneshot-http-passthrough.toml  oneshot-opus-transcode-fast.toml  stress-dynamic.toml  stress-oneshot.toml  ui-demo.toml
samples/loadtest/pipelines/: dynamic_audio_gain_chain.yml  dynamic_many_gains.yml  moq_broadcaster.yml  (+7 more)
sdks/plugin-sdk/: README.md
sdks/plugin-sdk/native/: Cargo.toml  README.md
sdks/plugin-sdk/native/src/: conversions.rs  lib.rs  logger.rs  types.rs
sdks/plugin-sdk/wasm/rust/: Cargo.toml  README.md
sdks/plugin-sdk/wasm/rust/src/: lib.rs
tools/licenses/: third-party-licenses.hbs
ui/: .commitlintrc.json  .prettierignore  README.md  eslint.config.ts  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
ui/src/: App.css  App.tsx  Layout.tsx  index.css  index.tsx  vite-env.d.ts
wit/: plugin.wit
(+285 files in other folders)
