[package]
name = "streamkit-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["Claudio Costa <cstcld91@gmail.com>", "StreamKit Contributors"]
description = "Core traits and data structures for real-time media processing"
homepage = "https://streamkit.dev"
repository = "https://github.com/streamer45/streamkit"
license = "MPL-2.0"
keywords = ["audio", "streaming", "realtime", "processing", "media"]
categories = ["multimedia", "network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.48", features = ["sync", "macros"] }
tokio-util = "0.7"

async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = { version = "1.1.0", features = ["derive"] }
ts-rs = { version = "11.1.0", features = ["serde-json-impl"] }

bytes = "1.11.0"
base64 = "0.22"
smallvec = "1.15"

tracing = "0.1.44"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.48", features = ["sync", "macros", "rt-multi-thread", "time"] }
