[package]
name = "streamkit-engine"
version = "0.1.0"
edition = "2021"
authors = ["Claudio Costa <cstcld91@gmail.com>", "StreamKit Contributors"]
description = "Pipeline execution engines for StreamKit"
homepage = "https://github.com/streamer45/streamkit"
repository = "https://github.com/streamer45/streamkit"
license = "MPL-2.0"
keywords = ["audio", "pipeline", "engine", "streaming", "realtime"]
categories = ["multimedia", "network-programming"]
readme = "README.md"
publish = false

[dependencies]
# Skit's core library
streamkit-core = { workspace = true }
streamkit-nodes = { workspace = true }
streamkit-api = { workspace = true }
streamkit-plugin-wasm = { workspace = true, optional = true }

bytes = { workspace = true }

futures = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }

opentelemetry = { workspace = true, features = ["metrics", "trace"] }

serde-saphyr = { workspace = true }

[features]
default = ["oneshot", "dynamic", "plugins", "script"]

# Enables the self-contained pipeline runner for stateless,
# start-to-finish processing. Ideal for oneshot file transcoding (e.g. HTTP request).
oneshot = []

# Enables the long-running, dynamic engine actor for real-time,
# stateful pipelines that can be reconfigured on the fly.
dynamic = []

# Enables WASM plugin support
plugins = ["dep:streamkit-plugin-wasm"]

# Enables script node support (JavaScript execution)
script = ["streamkit-nodes/script"]

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = "0.3"

[lints]
workspace = true
