[package]
name = "gain-plugin"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
streamkit-plugin-sdk-wasm = { path = "../../../sdks/plugin-sdk/wasm/rust" }
wit-bindgen = "0.44"
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols
codegen-units = 1   # Better optimization
