# SPDX-FileCopyrightText: © 2025 StreamKit Contributors
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "nllb-plugin-native"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "nllb"
crate-type = ["cdylib"]

[dependencies]
streamkit-plugin-sdk-native = { path = "../../../sdks/plugin-sdk/native" }
ct2rs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ctor = "0.2"

[lints.clippy]
# Categories
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Safety
unwrap_used = "warn"
expect_used = "warn"
# Complexity
cognitive_complexity = "warn"
# Math
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
# Allow-list (Noise reduction)
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
