# SPDX-FileCopyrightText: © 2025 StreamKit Contributors
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "vad-plugin-native"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "vad"
crate-type = ["cdylib"]  # Required for dynamic loading

[dependencies]
streamkit-plugin-sdk-native = { path = "../../../sdks/plugin-sdk/native" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
