# SPDX-FileCopyrightText: © 2025 StreamKit Contributors
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "whisper-plugin-native"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "whisper"
crate-type = ["cdylib"]

[dependencies]
streamkit-plugin-sdk-native = { path = "../../../sdks/plugin-sdk/native" }
whisper-rs = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ort = "2.0.0-rc.10"
ndarray = "0.16"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.clippy]
# Categories
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Safety
unwrap_used = "warn"
expect_used = "warn"
# Complexity
cognitive_complexity = "warn"
# Math
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
# Allow-list (Noise reduction)
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
