[package]
name = "streamkit-plugin-sdk-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["Claudio Costa <cstcld91@gmail.com>", "StreamKit Contributors"]
description = "SDK for writing native (C ABI) plugins for StreamKit"
homepage = "https://streamkit.dev"
repository = "https://github.com/streamer45/streamkit"
license = "MPL-2.0"
keywords = ["audio", "plugin", "native", "c-abi", "streaming"]
categories = ["multimedia", "api-bindings"]
readme = "README.md"

[dependencies]
streamkit-core = { version = "0.1.0", path = "../../../crates/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bytes = "1.11"
tracing = "0.1"

[lib]
crate-type = ["rlib"]

# Override workspace lints - this crate requires unsafe for C FFI
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
# Inherit workspace clippy lints
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
